--- a/web/templates/conductEditor.html
+++ b/web/templates/conductEditor.html
@@ -59,6 +59,10 @@
 	</body>
 </html>
 
+<script>
+	var CSRF = "{{CSRF}}"
+  </script>
+
 <!-- Right Click Menu -->
 <script>
 	(function ($, window) {
