--- a/web/templates/backups.html
+++ b/web/templates/backups.html
@@ -17,6 +17,7 @@
         <a href="/admin/backup-system/" target="blank"><button class='btn btn-default'>Backup System</button></a>
         <br><br>
         <form enctype="multipart/form-data" action="/admin/restore-system/" method="POST">
+            <input type="hidden" value="{{CSRF}}">
             <input type="file" name="file">
             <input class='btn btn-default' type="submit" value="Restore System">
         </form>
